# proyecto_embebido

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/esp-idf-lib-master/components/dht/: dht.c
components/esp-idf-lib-master/components/encoder/: encoder.c  encoder.h
components/esp-idf-lib-master/dht/: dht.c
components/esp-idf-lib-master/i2cdev/: i2cdev.c  i2cdev.h
components/esp-idf-lib-master/temp/: temp.h
components/javi/: config_dis.h  init.h  led.c  mqtt_funcs.c  pantallas.c  sntp_time.c  variables.h  wifi_con.c
components/mqtt/: mqtt_funcs.c
components/sntp/: sntp_time.c  sntp_time.h
components/ssd1306/: font8x8_basic.h  ssd1306.c  ssd1306.h  ssd1306_i2c.c
components/temp/: temp.h
main/: CMakeLists.txt  main.c
