idf_component_register(SRCS "main.c"
                            "../components/esp-idf-lib-master/components/dht/dht.c"
                            "../components/esp-idf-lib-master/components/encoder/encoder.c"
                            "../components/javi/sntp_time.c"
                            
                    INCLUDE_DIRS ".")
